<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/backgroud_list">

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.05"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.9"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15">

            <TextView
                android:id="@+id/tvFase"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_weight="0.2"
                android:layout_gravity="center"
                android:text="@string/nome_fase"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/spFase"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:layout_weight="0.25"/>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"/>

            <TextView
                android:id="@+id/tvNivel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_weight="0.2"
                android:layout_gravity="center"
                android:text="@string/nome_nivel"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Spinner
                android:id="@+id/spNivel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:layout_weight="0.25"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.55">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.33">

                    <TextView
                        android:id="@+id/tvQtdEstimulo"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.6"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:text="@string/nome_qtd_estimulos"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <Spinner
                        android:id="@+id/spNumEstimulos"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:layout_weight="0.25"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.33">

                    <TextView
                        android:id="@+id/tvTarefas"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.6"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:text="@string/nome_num_tarefas"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <Spinner
                        android:id="@+id/spNumTarefas"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:layout_weight="0.25"/>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.33">

                    <TextView
                        android:id="@+id/tvLinha"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.85"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:text="@string/rand_posicao_estimulo"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <CheckBox android:id="@+id/ckPosicaoAleatoria"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.15"
                        android:layout_gravity="end"/>

                </LinearLayout>



            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.05"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.45"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.33">

                    <TextView
                        android:id="@+id/tvLimiteErro"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.6"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:text="@string/limite_erros"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <Spinner
                        android:id="@+id/spLimiteErros"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:layout_weight="0.25"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.33">

                    <TextView
                        android:id="@+id/tvLimiteErroSom"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.6"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:text="@string/limite_som_erros"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <Spinner
                        android:id="@+id/spLimiteSomErros"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:layout_weight="0.25"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.33">

                    <TextView
                        android:id="@+id/tvLimiteInstrucaoTTS"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.6"
                        android:gravity="center_vertical"
                        android:textAlignment="center"
                        android:text="@string/silenciar_voz_apos"
                        android:textAppearance="?android:attr/textAppearanceLarge" />

                    <Spinner
                        android:id="@+id/spLimiteInstrucaoTTS"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:textStyle="bold"
                        android:layout_weight="0.25"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.17">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.80" />

            <Button
                android:id="@+id/btConfigurarPosicao"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.20"
                android:background="@drawable/seta_direita"/>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.03"/>

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.05"/>

</LinearLayout>
