<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.estimulos.app.ui.configuracao.ConfDadosEstimuloActivity"
    android:orientation="horizontal"
    android:background="@drawable/backgroud_list">

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.05"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.06"/>

        <TextView
            android:id="@+id/tvDadosJogo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:textAlignment="center"
            android:gravity="top"
            android:textStyle="bold"
            android:text="@string/dados_jogo_titulo"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/tvTema"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.14"
            android:gravity="bottom"
            android:textAlignment="center"
            android:text="@string/tema_jogo"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/etTema"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:ems="10"
            android:inputType="textCapSentences"
            >
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/tvPacienteJogo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.14"
            android:gravity="bottom"
            android:textAlignment="center"
            android:text="@string/nome_paciente"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/etPacienteJogo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:ems="10"
            android:inputType="textCapSentences" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.12"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvDtNascimento"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="bottom"
                android:textAlignment="center"
                android:text="@string/dt_nascimento_paciente"
                android:textAppearance="?android:attr/textAppearanceLarge"
                />

            <TextView
                android:id="@+id/tvExibeData"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="bottom"
                android:textAlignment="center"
                android:text="    /   /  "
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:onClick="showDatePickerDialog"/>
            </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.14"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/imageJogo"
            android:layout_weight="0.55"
            android:layout_gravity="center"
            android:src="@android:drawable/ic_menu_camera"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.1"/>

        <ImageButton
            android:id="@+id/btProximo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:gravity="center"
            android:background="@drawable/seta_direita"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.05"/>

        </LinearLayout>


    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.05"/>

</LinearLayout>

